Display temperatures for Network Device / Stratum Proxy workers

--- a/MultiMiner.Win/Controls/DetailsControl.resx
+++ b/MultiMiner.Win/Controls/DetailsControl.resx
@@ -125,7 +125,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj0yLjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADC
-        IAAAAk1TRnQBSQFMAgEBBQEAAXABAQFwAQEBQAEAAUABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        IAAAAk1TRnQBSQFMAgEBBQEAAaABAQGgAQEBQAEAAUABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         BAABAQIAAYADAAEBAQABCAYAAYAYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -154,26 +154,26 @@
         AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
         AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
         AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8A/wAtAAH0AfABuwS0
-        AbUBCQHzAf/zAAHzAbUKrQG0AQkB/+8AAfUBtQatAbUBuwG0Ba0BswHwAf/sAAHzAbMDrQK7Aa0BtAIA
-        AfMBrQGzAfABtAOtAbsB/+oAAfIDrQG1AfUBAAG1Aa0B8AIAAf8BswGtAfQB/wHxAbQCrQG0Af/oAAHz
-        A60B8AH/AQAB/wKtAfQDAAG7Aa0BvAIAAfUBtAKtAbUB/+YAAf8BtAKtAfIDAAHzAa0BtAH/AwAB8QGt
-        AbQDAAH/AbQCrQG85gABuwKtAbwEAAEJAa0BuwQAAfUCrQH/AwAB/wG0Aq0B9OQAAfQCrQG0Af8EAAG0
+        AbUBCQHzAf/zAAHzAbUKrQG0AQkB/+8AAf8BtQatAbUBuwG0Ba0BswHwAf/sAAHzAbMDrQK7Aa0BtAIA
+        AfMBrQGzAfABtAOtAbsB/+oAAfIDrQG1Af8BAAG1Aa0B8AIAAf8BswGtAfQB/wHxAbQCrQG0Af/oAAHz
+        A60B8AH/AQAB/wKtAfQDAAG7Aa0BvAIAAf8BtAKtAbUB/+YAAf8BtAKtAfIDAAHzAa0BtAH/AwAB8QGt
+        AbQDAAH/AbQCrQG85gABuwKtAbwEAAEJAa0BuwQAAf8CrQH/AwAB/wG0Aq0B9OQAAfQCrQG0Af8EAAG0
         Aa0B8QUAAbQBrQHzBAAB8wKtAbvkAAG7Aq0BtQW8Aq0BuwW8AbQBrQG1BbwBswKtAfTiAAH/AbMbrQG8
         4gAB8wKtB7QBrQGzB7QCrQa0Aq0BtMcAGZAB8wEAAfACrQH0BQAB8AGtAbUGAAH0Aq0B/wUAAbUCrQH/
-        xgACkAN6AZADegGQA3oBkAN6AZADegGQA3oB/wEAAbsCrQH/BQABCQGtAbsGAAH1Aq0B/wUAAQkCrQH1
+        xgACkAN6AZADegGQA3oBkAN6AZADegGQA3oB/wEAAbsCrQH/BQABCQGtAbsGAAH/Aq0B/wUAAQkCrQH/
         xgACkAN6AZADegGQA3oBkAN6AZADegGQA3oCAAG7Aq0GAAG7Aa0BCQYAAf8CrQH/BQAB8AKtAfTGAAKQ
         A3oBkAN6AZADegGQA3oBkAN6AZADegIAAbsCrQYAAQkBrQEJBgAB/wKtAf8FAAHwAq0B9MYAApADegGQ
-        A3oBkAN6AZADegGQA3oBkAN6Af8BAAG7Aq0B/wUAAQkBrQG7BgAB9QKtAf8FAAEJAq0B9cIAHZAB8wEA
+        A3oBkAN6AZADegGQA3oBkAN6Af8BAAG7Aq0B/wUAAQkBrQG7BgAB/wKtAf8FAAEJAq0B/8IAHZAB8wEA
         AfACrQH0BQAB8AGtAbsGAAH0Aq0B/wUAAbUCrQH/wgAdkAHzAQAB8wKtB7QCrQe0Aq0GtAKtAbTDAB2Q
-        AbsBAAH/AbMbrQHwwwAFkARxA5AEcQOQBHEHkAIAAbsCrQHwBfQCrQHxBfQBtQGtAbsF9AG0Aq0B9cMA
+        AbsBAAH/AbMbrQHwwwAFkARxA5AEcQOQBHEHkAIAAbsCrQHwBfQCrQHxBfQBtQGtAbsF9AG0Aq0B/8MA
         BJAF/wJxBf8CcQX/AXEGkAHzAQAB9AKtAbQB/wQAAbQBrQHyBQABtAGtAfMEAAHyAq0Bu8QABJAF/wJx
-        Bf8CcQX/AXEEkAJxAZgCAAG7Aq0BvAQAAQkBrQG7BAAB9QKtAf8DAAH1AbQCrQH0xAAEkAX/AnEF/wJx
+        Bf8CcQX/AXEEkAJxAZgCAAG7Aq0BvAQAAQkBrQG7BAAB/wKtAf8DAAH/AbQCrQH0xAAEkAX/AnEF/wJx
         Bf8BcQOQBP8B9AEAAf8BtAKtAfEDAAHzAa0BtAQAAfIBrQG0AwAB/wG0Aq0B8MUABJAF/wJxBf8CcQX/
         AXEDkAb/AQAB9AOtAfAB/wEAAf8CrQH0AwABuwGtAbwCAAH0AbQCrQG7Af/FAASQBf8CcQX/AnEF/wFx
         A5AF/wH0AgAB8wGzAq0BtQH0AQABuwGtAfACAAH/AbMBrQH0Af8B8AGzAq0BtQH/xgAEkAX/AnEF/wJx
         Bf8BcQOQBv8B9AIAAfQBtAOtArsBrQG0AgAB8wGtAbQB8AG0A60BCQH/xwAEkAX/AnEF/wJxBf8BcQOQ
         B/8B9AIAAf8BCQWtAbMCtQG0Ba0BtAHzAgABu8YABJAF/wJxBf8CcQX/AXELkAG7Af8CAAH0AQkBtAmt
-        AbQB8QH/AQAB/wG7AZDGAAWQBHEDkARxA5AEcQWQCHEBnQHwAwAB/wH0AfABuwK1AbsBCQHxAfUDAAHx
+        AbQB8QH/AQAB/wG7AZDGAAWQBHEDkARxA5AEcQWQCHEBnQHwAwAB/wH0AfABuwK1AbsBCQHxAf8DAAHx
         AZ0CkMYABZARcQWQDP8B8wwAAfQB/wSQxgAFkBFxBZAM/wKQAbsC9AH/AgAB/wP0A/8EkMYABJAT/wSQ
         DP8DkAz/BJDGAASQE/8BcQOQDP8DkAz/BJDGAASQE/8BcQOQDP8DkAz/BJDGAASQE/8BcSKQxgAEkBP/
         AXEEkAtxBJALcQSQxgAEkBP/AXEDkAz/A5AM/wSQxgAEkBP/AXEDkAz/A5AM/wSQxgAEkBP/AXEDkAz/
@@ -272,6 +272,9 @@
   </metadata>
   <metadata name="cryptoCoinBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>292, 17</value>
+  </metadata>
+  <metadata name="temperatureDataGridViewTextBoxColumn.UserAddedColumn" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
   </metadata>
   <metadata name="workerBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>482, 17</value>
