Update BFGMiner naming/branding

--- a/MultiMiner.Win/Forms/WizardForm.resx
+++ b/MultiMiner.Win/Forms/WizardForm.resx
@@ -120,7 +120,7 @@
   <data name="label1.Text" xml:space="preserve">
     <value>Welcome and thank you for choosing MultiMiner.
 
-Click Next and MultiMiner will automatically download and install bfgminer for your Operating System.
+Click Next and MultiMiner will automatically download and install BFGMiner for your Operating System.
 
 
 
